My Initial Commit

--- a/indexx.html
+++ b/indexx.html
@@ -93,6 +93,7 @@
         </div>
         <img src="arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'">
     </section>
+
     <section id="experience">
         <p class="section_text_p1">Explore My</p>
         <h1 class="name">Experience</h1>
@@ -183,11 +184,85 @@
                             <p>Intermediate</p>
                         </div>
                     </article>
+                    <article>
+                        <img src="done.png" alt="Experience Icon" class="icon">
+                        <div>
+                            <h3>Java</h3>
+                            <p>Basics</p>
+                        </div>
+                    </article>
                 </div>
             </div>
            </div>
         </div>
         <img src="arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#project'">
+    </section>
+
+    <section id="projects">
+        <p class="section_text_p1">Browse My Recent</p>
+        <h1 class="name">Projects</h1>
+        <div class="experience-details-container">
+            <div class="about-container">
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img src="profile.jpg" alt="Project 1" class="project-img"> 
+                </div>
+                <h2 class="experience-sub-name project-name">Project One</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color2 project-btn" onclick="location.href='https://github.com/Kipkirui023'">GitHub</button>
+                    <button class="btn btn-color2 project-btn" onclick="location.href='https://github.com/Kipkirui023'">Live Demo</button>
+                </div>
+            </div>
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img src="Assg2 L3.jpg" alt="Project 2" class="project-img"> 
+                </div>
+                <h2 class="experience-sub-name project-name">Project Two</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color2 project-btn" onclick="location.href='https://github.com/Kipkirui023'">GitHub</button>
+                    <button class="btn btn-color2 project-btn" onclick="location.href='https://github.com/Kipkirui023'">Live Demo</button>
+                </div>
+            </div>
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img src="3.jpg" alt="Project 3" class="project-img"> 
+                </div>
+                <h2 class="experience-sub-name project-name">Project Three</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color2 project-btn" onclick="location.href='https://github.com/Kipkirui023'">GitHub</button>
+                    <button class="btn btn-color2 project-btn" onclick="location.href='https://github.com/Kipkirui023'">Live Demo</button>
+                </div>
+            </div>
+        </div>
+        </div>
+        <img src="arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#project'">
+    </section>
+
+    <section id="contact">
+        <p class="section_text_p1">Get In Touch</p>
+        <h1 class="name">Contact Me</h1>
+        <div class="contact-info-upper-container">
+            <div class="conatact-info-container">
+                <img src="linkedin.jpeg" alt="Email" class="contact-icon">
+                <p><a href="">Example@gmail.com</a></p>
+            </div>
+            <div class="conatact-info-container">
+                <img src="linkedin.jpeg" alt="Telephone" class="contact-icon">
+                <p><a href="">Example@gmail.com</a></p>
+            </div>
+            <div class="conatact-info-container">
+                <img src="github.jpeg" alt="WhatsApp" class="contact-icon">
+                <p><a href="">Example@gmail.com</a></p>
+            </div>
+            <div class="conatact-info-container">
+                <img src="linkedin.jpeg" alt="LinkedIn" class="contact-icon">
+                <p><a href="">Example@gmail.com</a></p>
+            </div>
+            <div class="conatact-info-container">
+                <img src="linkedin.jpeg" alt="Facebook" class="contact-icon">
+                <p><a href="">Example@gmail.com</a></p>
+            </div>
+        </div>
     </section>
    
     <script src="script.js">
